<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">-->
<RadioGroup
    android:layout_width="match_parent"
    android:id="@+id/mailGroup"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RadioButton android:id="@+id/mail_errors"
            android:text="@string/mail_errors"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_mail_errors"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="@dimen/dialog_margin"/>

    <RadioButton android:id="@+id/mail_history"
        android:text="@string/mail_history"
        android:layout_height="40dp"
        android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dialog_margin"
            android:layout_marginRight="@dimen/dialog_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_mail_history"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="@dimen/dialog_margin"/>
</RadioGroup>